--- a/io_prj_server/package.json
+++ b/io_prj_server/package.json
@@ -3,14 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "debug": "node --inspect ./bin/www"
   },
   "dependencies": {
+    "@tensorflow/tfjs-node": "^0.1.11",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mssql": "^10.0.2"
   }
 }
