--- a/io_prj_server/package.json
+++ b/io_prj_server/package.json
@@ -7,7 +7,6 @@
     "debug": "node --inspect ./bin/www"
   },
   "dependencies": {
-    "@tensorflow/tfjs-node": "^0.1.21",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^3.1.10",
@@ -16,6 +15,11 @@
     "module-alias": "^2.2.3",
     "morgan": "~1.9.1",
     "mssql": "^10.0.2"
+  },
+  "devDependencies": {
+    "express-session": "^1.18.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   },
   "_moduleAliases": {
     "@config": "config",
