--- a/io_prj_server/package.json
+++ b/io_prj_server/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "debug": "node --inspect ./bin/www"
+    "debug": "node --inspect ./bin/www",
+    "test": "jest"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
